@@ -1,9 +1,11 @@
 package com.example.demo.model;
 
 import java.util.Collection;
-import java.util.Collections;
+
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import lombok.AllArgsConstructor;
@@ -15,12 +17,14 @@ public class CustomUserDetails implements UserDetails{
 	 */
 	private static final long serialVersionUID = 1L;
 	private User user;
-	
+	String role;
+
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		// TODO Auto-generated method stub
-		return Collections.emptyList();
+		return List.of(new SimpleGrantedAuthority(role));
 	}
+	
 
 	@Override
 	public String getPassword() {
